code/src/style.css
html {
    font-size: 1em;
    line-height: 1.4;
    font-family: sans-serif;
}

html, body {
    width: 100vw;
    height: 100vh;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

body > * {
    width: 1500px;
    padding: 30px 10px;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.heading h1, .heading h2 {
    margin: 0;
}

.dropdown {
    display: flex;
    align-items: center;
}

.dropdown > select {
    height: 30px;
    width: 150px;
}

#map-section {
    display: flex;
}

#map {
    margin: 0 auto;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    padding: 0;
}

#chart-section {
    display: flex;
    justify-content: space-between;
}

.chart-wrapper {;
    width: calc(100% / 4.3);
    text-align: center;
}

.chart-wrapper h3 {;
    height: 60px;
    margin: 0 0 10px 0;
}

.chart {
    height: 300px;
    background-color: #ececec;
}

rect {
    fill: chocolate;
    fill-opacity: 0.8;
}

rect:hover {
    fill-opacity: 1;
}

#alarmTypeBarChart, #mostActiveBrigadesBarChart, #averageCallDurationBarChart {
    margin-left: -152px;
}

